Home completed | Product List Completed | Search Function Added
TODO:Product detail display activity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,8 @@ dependencies {
     //glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    //lottie
+    implementation "com.airbnb.android:lottie:2.7.0"
+
 }
 apply plugin: 'com.google.gms.google-services'
