--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,6 @@
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -31,7 +30,8 @@
         </activity>
 
         <activity android:name=".Activity.MainActivity"
-            android:theme="@style/CustomTheme">
+            android:theme="@style/CustomTheme"
+            android:windowSoftInputMode="adjustPan">
 
         </activity>
 
@@ -41,6 +41,7 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
         </service>
+
     </application>
 
 </manifest>
