--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.invaderx.firebasetrigger">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <dist:module dist:instant="true" />
 
@@ -15,33 +15,32 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Auth.UserLogin"
+        <activity
+            android:name=".Activity.ProductPageActivity"
+            android:theme="@style/White"></activity>
+        <activity
+            android:name=".Auth.UserLogin"
             android:theme="@style/AppTheme.NoActionbar">
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".Auth.UserSignUp"
-            android:theme="@style/AppTheme.NoActionbar">
-
-        </activity>
-
-        <activity android:name=".Activity.MainActivity"
+        <activity
+            android:name=".Auth.UserSignUp"
+            android:theme="@style/AppTheme.NoActionbar"></activity>
+        <activity
+            android:name=".Activity.MainActivity"
             android:theme="@style/CustomTheme"
-            android:windowSoftInputMode="adjustPan">
+            android:windowSoftInputMode="adjustPan"></activity>
 
-        </activity>
-
-        <service
-            android:name=".Services.Notify">
+        <service android:name=".Services.Notify">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
