--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="true">
         <activity
             android:name=".Activity.ProductPageActivity"
-            android:theme="@style/White"></activity>
+            android:theme="@style/White" />
         <activity
             android:name=".Auth.UserLogin"
             android:theme="@style/AppTheme.NoActionbar">
@@ -29,11 +29,11 @@
         </activity>
         <activity
             android:name=".Auth.UserSignUp"
-            android:theme="@style/AppTheme.NoActionbar"></activity>
+            android:theme="@style/AppTheme.NoActionbar" />
         <activity
             android:name=".Activity.MainActivity"
             android:theme="@style/CustomTheme"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan" />
 
         <service android:name=".Services.Notify">
             <intent-filter>
