--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
     //image picker
     implementation 'com.asksira.android:bsimagepicker:1.1.0'
+    //custom shape view
+    implementation 'com.github.florent37:shapeofview:1.3.2'
 
 }
 apply plugin: 'com.google.gms.google-services'
